--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,15 @@
-name: CI básico 
-​​
-on: 
+on:
   push:
 
-​jobs: 
-​ build: 
-  ​runs-on: ubuntu-latest 
-  ​steps: 
-    ​- name: Clonar el repositorio 
-    ​uses: actions/checkout@v3 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clonar el repositorio
+        uses: actions/checkout@v3
 
-    - name: Verificar que el repositorio se clonó 
-    run: ls -la
+      - name: Verificar que el repositorio se clonó
+        run: ls -la
 
-    - name: Mensaje simulado 
-    run: echo "¡CI ejecutado correctamente!" 
+      - name: Mensaje simulado
+        run: echo "¡CI ejecutado correctamente!"
